@@ -1,13 +1,0 @@
-
-
-- tables need to get fixed
-		
-	that said, I don't think there is a "root" row (there should be, but I don't think it's there)
-
-	at null, the pointer changes again, but the count goes up (when finalizing)
-
-
-- the count being off is not critical, but it holds up rendering...
-	and also holds up getting reverse implemented
-
-
